--- a/.github/workflows/build-release-policy.yaml
+++ b/.github/workflows/build-release-policy.yaml
@@ -8,37 +8,72 @@ jobs:
   release_policy:
     runs-on: ubuntu-latest
     name: build
+
     steps:
-    
     - uses: actions/checkout@v2
 
-    - name: Build Policy 
-      id: aserto-build
-      uses: aserto-dev/aserto-build-action@v2
+    - name: Read config
+      id: config
+      uses: opcr-io/ga-yaml-parser@v0.1
       with:
-        source_path: src
-        target_path: build
-        target_file: bundle.tar.gz
+        file: .github/config.yaml
+
+    - name: List Sver Tags
+      uses: aserto-dev/sver-action@v0
+      id: "sver"
+      with:
+        docker_image: ${{ steps.config.outputs.repo }}
+        docker_registry: ${{ steps.config.outputs.server }}
+        docker_username: ${{ steps.config.outputs.username }}
+        docker_password: ${{ secrets.ASERTO_PUSH_KEY }}
+
+    - name: Calculate image tags
+      id: "tags"
+      run: |
+        while read -r tag; do
+          tags="$tags ${{ steps.config.outputs.repo }}:$tag"
+        done < <(echo "${{ steps.sver.outputs.version }}")
+
+        echo ::set-output name=target_tags::$tags
+
+    - name: Policy Login
+      id: policy-login
+      uses: opcr-io/policy-login-action@v2
+      with:
+        username: ${{ steps.config.outputs.username }}
+        password: ${{ secrets.ASERTO_PUSH_KEY }}
+        server: ${{ steps.config.outputs.server }}
+
+    - name: Policy Build
+      id: policy-build
+      uses: opcr-io/policy-build-action@v2
+      with:
+        src: src
+        tag: ${{ steps.config.outputs.repo }}
         revision: "$GITHUB_SHA"
-        verbose: true
-
-    - name: Release Policy
-      id: release
-      uses: xresloader/upload-to-github-release@master
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        file: "build/bundle.tar.gz"
-        tags: true
-        draft: false
-        verbose: true
+        POLICY_DEFAULT_DOMAIN: ${{ steps.config.outputs.server }}
 
-    - name: Push Policy 
-      id: aserto-push
-      uses: aserto-dev/aserto-push-action@v2
-      env:
-        ASERTO_PUSH_KEY: ${{ secrets.ASERTO_PUSH_KEY }}
+    - name: Policy Tag
+      id: policy-tag
+      uses: opcr-io/policy-tag-action@v2
       with:
-        bundle: build/bundle.tar.gz
-        release_id: ${{ steps.release.outputs.release_id }}
-        verbose: true
+        source_tag: ${{ steps.config.outputs.repo }}
+        target_tags: ${{ steps.tags.outputs.target_tags }}
+      env:
+        POLICY_DEFAULT_DOMAIN: ${{ steps.config.outputs.server }}
+
+    - name: Policy Push
+      id: policy-push
+      uses: opcr-io/policy-push-action@v2
+      with:
+        tags: ${{ steps.tags.outputs.target_tags }}
+      env:
+        POLICY_DEFAULT_DOMAIN: ${{ steps.config.outputs.server }}
+
+    - name: Policy Logout
+      id: policy-logout
+      uses: opcr-io/policy-logout-action@v2
+      with:
+        server: ${{ steps.config.outputs.server }}
+  
